// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component renders a Header component with supplied props 1`] = `
<Fragment>
  <div
    className="logo"
  />
  <header
    className="App__header Navbar"
  >
    <div
      className="Navbar__Link Navbar__Link-brand"
    >
      Home
    </div>
    <div
      className="Navbar__Link Navbar__Link-toggle"
      onClick={[Function]}
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f0c9",
              "M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z",
            ],
            "iconName": "bars",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </div>
    <nav
      className="topnav Navbar__Items"
    >
      <div
        className="Navbar__Link"
      >
        <Link
          className="active"
          to="/homepage"
        >
          Home
        </Link>
      </div>
      <div
        className="Navbar__Link"
      >
        <Link
          className=""
          to="/search"
        >
          Search
        </Link>
      </div>
      <div
        className="Navbar__Link"
      >
        <Link
          className=""
          to="/wishlist"
        >
          Wishlist
        </Link>
      </div>
      <div
        className="Navbar__Link"
      >
        <Link
          className=""
          to="/contribute"
        >
          Contribute
        </Link>
      </div>
      <nav
        className="Navbar__Items Navbar__Items--right"
      >
        <div
          className="Navbar__Link"
        >
          <div>
            <Link
              className=""
              to="/login"
            >
              Log in
            </Link>
          </div>
        </div>
      </nav>
    </nav>
  </header>
</Fragment>
`;

exports[`Header component renders a Header component without supplied props 1`] = `
<Fragment>
  <div
    className="logo"
  />
  <header
    className="App__header Navbar"
  >
    <div
      className="Navbar__Link Navbar__Link-brand"
    >
      Game
    </div>
    <div
      className="Navbar__Link Navbar__Link-toggle"
      onClick={[Function]}
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              448,
              512,
              Array [],
              "f0c9",
              "M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z",
            ],
            "iconName": "bars",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </div>
    <nav
      className="topnav Navbar__Items"
    >
      <div
        className="Navbar__Link"
      >
        <Link
          className=""
          to="/homepage"
        >
          Home
        </Link>
      </div>
      <div
        className="Navbar__Link"
      >
        <Link
          className=""
          to="/search"
        >
          Search
        </Link>
      </div>
      <div
        className="Navbar__Link"
      >
        <Link
          className=""
          to="/wishlist"
        >
          Wishlist
        </Link>
      </div>
      <div
        className="Navbar__Link"
      >
        <Link
          className=""
          to="/contribute"
        >
          Contribute
        </Link>
      </div>
      <nav
        className="Navbar__Items Navbar__Items--right"
      >
        <div
          className="Navbar__Link"
        >
          <div>
            <Link
              className=""
              to="/login"
            >
              Log in
            </Link>
          </div>
        </div>
      </nav>
    </nav>
  </header>
</Fragment>
`;
